# smart-factory-analytics-server

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.development.local.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/models/: ethernet_ip_models.py  opcua_models.py
app/routers/: config.py  data.py  opcua.py  opcua_explorer.py
app/services/: ethernet_ip_manager.py  opcua_explorer.py  opcua_manager.py
app/utils/: config.py  config_loader.py  opcua_parsers.py
config/: settings.yml
